--- a/a_propos.html
+++ b/a_propos.html
@@ -82,63 +82,102 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula. Nam tellus urna, lobortis vel auctor ut, consequat ac tellus. Suspendisse consequat tristique justo tempor hendrerit. Nunc sollicitudin eros sed est lacinia posuere. Nam sed felis volutpat, hendrerit lectus cursus, posuere neque.</p>
         </div>
       </div>
-      <div class="container">
-        <div class="grid-3">
-          <div class="boucher fournisseur-card">
-            <div class="fournisseur-img">
-              <img src="/images/boucher.png" alt="Le Boucher" />
+      <div class="slideshow-fournisseurs">
+        <div class="container">
+          <div class="grid-3">
+            <div class="slides content-slideshow-fournisseurs fade">
+              <div class="fournisseur-card">
+                <div class="fournisseur-img">
+                  <img src="/images/fournisseurs/boucher.png" alt="Le Boucher" />
+                </div>
+                <div class="fournisseur-text">
+                  <h4>Boucher</h4>
+                  <h5>Prénom Nom</h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
+                </div>
+              </div>
             </div>
-            <h4>Boucher</h4>
-            <h5>Prénom Nom</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
+            <div class="slides content-slideshow-fournisseurs fade">
+              <div class="fournisseur-card">
+                <div class="fournisseur-img">
+                  <img src="/images/fournisseurs/charcutiere.png" alt="La Charcutière" />
+                </div>
+                <div class="fournisseur-text">
+                  <h4>Charcutière</h4>
+                  <h5>Prénom Nom</h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
+                </div>
+              </div>
+            </div>
+            <div class="slides content-slideshow-fournisseurs fade">
+              <div class="fournisseur-card">
+                <div class="fournisseur-img">
+                  <img src="/images/fournisseurs/poissonnier.png" alt="Le Poissonnier" />
+                </div>
+                <div class="fournisseur-text">
+                  <h4>Poissonnier</h4>
+                  <h5>Prénom Nom</h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
+                </div>
+              </div>
+            </div>
+            <div class="slides content-slideshow-fournisseurs fade">
+              <div class="fournisseur-card">
+                <div class="fournisseur-img">
+                  <img src="/images/fournisseurs/volailler.png" alt="Le Volailler" />
+                </div>
+                <div class="fournisseur-text">
+                  <h4>Volailler</h4>
+                  <h5>Prénom Nom</h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
+                </div>
+              </div>
+            </div>
+            <div class="slides content-slideshow-fournisseurs fade">
+              <div class="fournisseur-card">
+                <div class="fournisseur-img">
+                  <img src="/images/fournisseurs/fromager.png" alt="Le Fromager" />
+                </div>
+                <div class="fournisseur-text">
+                  <h4>Fromager</h4>
+                  <h5>Prénom Nom</h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
+                </div>
+              </div>
+            </div>
+            <div class="slides content-slideshow-fournisseurs fade">
+              <div class="fournisseur-card">
+                <div class="fournisseur-img">
+                  <img src="/images/fournisseurs/maraichere.png" alt="La Maraîchère" />
+                </div>
+                <div class="fournisseur-text">
+                  <h4>Maraîchère</h4>
+                  <h5>Prénom Nom</h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
+                </div>
+              </div>
+            </div>
+            <div class="slides boulanger content-slideshow-fournisseurs fade">
+              <div class="fournisseur-card">
+                <div class="fournisseur-img">
+                  <img src="/images/fournisseurs/boulanger.png" alt="Le Boulanger" />
+                </div>
+                <div class="fournisseur-text">
+                  <h4>Boulanger</h4>
+                  <h5>Prénom Nom</h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="charcutiere fournisseur-card">
-            <div class="fournisseur-img">
-              <img src="/images/boucher.png" alt="Le Boucher" />
-            </div>
-            <h4>Charcutière</h4>
-            <h5>Prénom Nom</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
-          </div>
-          <div class="poissonnier fournisseur-card">
-            <div class="fournisseur-img">
-              <img src="/images/boucher.png" alt="Le Boucher" />
-            </div>
-            <h4>Poissonnier</h4>
-            <h5>Prénom Nom</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
-          </div>
-          <div class="volailler fournisseur-card">
-            <div class="fournisseur-img">
-              <img src="/images/boucher.png" alt="Le Boucher" />
-            </div>
-            <h4>Volailler</h4>
-            <h5>Prénom Nom</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
-          </div>
-          <div class="fromager fournisseur-card">
-            <div class="fournisseur-img">
-              <img src="/images/boucher.png" alt="Le Boucher" />
-            </div>
-            <h4>Fromager</h4>
-            <h5>Prénom Nom</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
-          </div>
-          <div class="maraichere fournisseur-card">
-            <div class="fournisseur-img">
-              <img src="/images/boucher.png" alt="Le Boucher" />
-            </div>
-            <h4>Maraîchère</h4>
-            <h5>Prénom Nom</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
-          </div>
-          <div class="boulanger fournisseur-card">
-            <div class="fournisseur-img">
-              <img src="/images/boucher.png" alt="Le Boucher" />
-            </div>
-            <h4>Boulanger</h4>
-            <h5>Prénom Nom</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula.</p>
+          <div class="slides-dot" style="text-align: center;">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
           </div>
         </div>
       </div>
@@ -153,5 +192,6 @@
 
   <script src="scripts.js"></script>
   <script src="/scripts/swiper.js"></script>
+  <script src="/scripts/slideshow.js"></script>
 </body>
 </html>
