--- a/la_carte.html
+++ b/la_carte.html
@@ -25,17 +25,17 @@
     </div>
   </header>
   <main>
-    <div class="card-plats">
+    <div class="slideshow-plats">
       <div class="container">
         <div class="grid-2">
-          <div class="img-card-plats fade">
+          <div class="slides content-slideshow-plats fade">
             <img src="/images/plat-01.png" alt="Le premier plat">
           </div>
-          <div class="img-card-plats fade">
+          <div class="slides content-slideshow-plats fade">
             <img src="/images/plat-02.png" alt="Le second plat">
           </div>
         </div>
-        <div class="slideshow-dot" style="text-align: center;">
+        <div class="slides-dot" style="text-align: center;">
           <span class="dot" onclick="currentSlide(1)"></span>
           <span class="dot" onclick="currentSlide(2)"></span>
         </div>
