Traitement du formulaire de contact en JS et PHP

--- a/infos_pratiques.html
+++ b/infos_pratiques.html
@@ -9,7 +9,7 @@
       <ul>
         <li class="adresse"><span class="semi-bold">Adresse :</span> 62 rue de la Croix Blanche, 33 000 BORDEAUX</li>
         <li class="parking"><span class="semi-bold">Parking :</span> 22 Pl. des Martyrs de la Résistance, 33000 Bordeaux (9 min à pied)</li>
-        <li class="bus"><span class="semi-bold">Bus :</span> Ligne G - 2 - 82 - s57</li>
+        <li class="bus"><span class="semi-bold">Bus :</span> Ligne G - 2 - 82 - s57 (Arrêt : Croix Blanche ou Lycée Camille Julian)</li>
       </ul>
     </div>
     <div class="map-container">
