--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+  <script src="scripts/form_validation.js"></script>
 </head>
 <body>
   <header class="head-degr-2">
@@ -27,7 +28,7 @@
   <main>
     <section class="formulaire">
       <div class="container">
-        <form action="" method="post">
+        <form action="form_process.php" method="post">
           <div class="grid-3">
             <div class="form-champ nom">
               <label for="nom">Nom <span class="red">*</span></label>
@@ -39,7 +40,7 @@
             </div>
             <div class="form-champ telephone">
               <label for="telephone">Téléphone <span class="red">*</span></label>
-              <input type="tel" name="telephone" id="telephone" pattern="[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}" placeholder="Quel est votre numéro de téléphone" required>
+              <input type="tel" name="telephone" id="telephone" pattern="^(?:(?:\+|00)33|0)\s*[1-9](from 1 to 9)(?:[\s.-]*\d{2}){4}$" placeholder="Quel est votre numéro de téléphone" required>
             </div>
             <div class="form-champ email">
               <label for="email">Adresse e-mail <span class="red">*</span></label>
