Mise en forme du formulaire et ajustement global

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
   </header>
   <main>
     <section class="formulaire">
-      <div class="container">
+      <div class="form-container">
         <form action="form_process.php" method="post">
           <div class="grid-3">
             <div class="form-champ nom">
