Début du script pour la mise à jour de la carte avec le tableau Google Sheets

--- a/la_carte.html
+++ b/la_carte.html
@@ -65,15 +65,10 @@
           <div class="card-wrapper card-menu menu-entrees">
             <div class="head-card">
               <h4>Entrées</h4>
-              <p class="prix">5 €</p>
+              <p class="prix" id="menu-prix-entrees"></p>
             </div>
             <div class="content-card">
-              <ul>
-                <li>Gaspacho de tomates ananas</li>
-                <li>Croquettes de boudin mayonnaise au wasabi</li>
-                <li>Tartare d’avocat et crevettes</li>
-                <li>Taboulet de Quinoa crevettes de risotto</li>
-              </ul>
+              <ul id="menu-entrees"></ul>
             </div>
           </div>
           <div class="card-wrapper card-menu menu-plats">
@@ -577,5 +572,6 @@
   <script src="scripts.js" defer></script>
   <script src="/scripts/slideshow.js"></script>
   <script src="/scripts/filter.js"></script>
+  <script src="scripts/restaurant_menu.js" defer></script>
 </body>
 </html>
