Textes du sites + modificiations page La Carte

--- a/a_propos.html
+++ b/a_propos.html
@@ -39,7 +39,7 @@
               <h3>Qui Sommes-Nous ?</h3>
             </div>
             <div class="swiper-text">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula. Nam tellus urna, lobortis vel auctor ut, consequat ac tellus. Suspendisse consequat tristique justo tempor hendrerit. Nunc sollicitudin eros sed est lacinia posuere. Nam sed felis volutpat, hendrerit lectus cursus, posuere neque.</p>
+              <p>Chef Momo, avec ses 30 ans d'expérience dans des villes comme Paris, Genève, Arcachon a fini par poser ses valises à Bordeaux. Grâce aux différents établissement dans lesquels il a travaillé, il a pu découvrir différentes influences culinaires pour crée des plats à travers lesquels il célebre les saveurs locales. Après le premier restaurant à succès "Chai Maestro" situé dans le quartier de Mériadeck, le chef a continué sa route vers le quartier Saint-Seurin. Notre équipe de serveurs, menée par la dynamique Virgine, s'engage à offrir un service chaleureux et attentif, assurant que chaque visite soit mémorable. Ensemble, nous partageons une passion commune pour la gastronomie et l'accueil, faisant de La Croix Blanche une destination incontournable pour les gourmets et amateurs de bonne cuisine.</p>
             </div>
           </div>
           <div class="swiper-slide">
@@ -51,7 +51,8 @@
               <h3>La Croix Blanche</h3>
             </div>
             <div class="swiper-text">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula. Nam tellus urna, lobortis vel auctor ut, consequat ac tellus. Suspendisse consequat tristique justo tempor hendrerit. Nunc sollicitudin eros sed est lacinia posuere. Nam sed felis volutpat, hendrerit lectus cursus, posuere neque.</p>
+              <p>Situé au cœur de Bordeaux dans le quartier Saint-Seurin, La Croix Blanche est bien plus qu'un simple restaurant : c'est une expérience culinaire unique orchestrée par une équipe passionnée. La terrase calme et verdoyante côté jardin offre trois espaces. Une partie pergola ombragé, une terrase ensoleillé ainsi qu'un salon de jardin. Une jardinière composée d'herbes aromatiques sert au chef dans la composition de ses plats.
+              </p>
             </div>
           </div>
           <div class="swiper-slide">
