--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       <div class="full-container">
         <div class="titre">
           <h1>Contact</h1>
-          <h5>Réservez votre table chez La Croix Blanche !</h5>
+          <h5>Réservez votre table à La Croix Blanche !</h5>
         </div>
         <div class="small-container texte-intro">
           <p class="white">Offrez-vous une parenthèse gourmande riche en saveurs et en couleurs. Remplissez le formulaire ci-dessous pour soumettre une demande de réservation. Nous reviendrons vers vous dans les plus bref délais afin de vous confirmer votre demande.</p>
