--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="navigation"></div>
     <div class="header-container-accueil">
       <div class="slogan">
-        <h2>Bienvenue Chez</h2>
+        <h2>Bienvenue à</h2>
         <h1>La Croix Blanche</h1>
         <p>Cuisine Tradionnelle Française</p>
         <div class="drapeau">
@@ -31,8 +31,7 @@
           <h3>Tradition & Modernité</h3>
         </div>
         <div class="texte-intro">
-          <p>À la recherche d’une expérience culinaire unique entre amis ou en famille ? Vous êtes au bon endroit. Notre restaurant à Bordeaux se fait un plaisir de vous accueillir dans une ambiance chaleureuse et conviviale.</p>
-          <p>Situés à Bordeaux centre, nous sommes proches des quartiers de Caudéran, Mériadeck, Ornano, Pellegrin, Primerose, Saint-Bruno, Saint-Seurin-Fondaudège, du Parc Bordelais et du stade Chaban-Delmas.</p>
+          <p>Situé entre les quartiers Saint-Seurin, Caudéran et Fondaudège à Bordeaux, notre restaurant vous invite à découvrir une ambiance bistro chic dans une salle conviviale ou sur notre terrasse ombragée. Venez profiter d'un cadre élégant et chaleureux pour partager un moment gourmand, sublimé par une sélection de vins français.</p>
         </div>
       </div>
     </section>
@@ -59,18 +58,18 @@
           <h3>Eveillez Vos Sens</h3>
         </div>
         <div class="texte-intro">
-          <p>Découvrez notre carte destinée au palais les plus fins. Laissez-vous porter par des saveurs aussi douces qu’explosives pour une expérience culinaire unique.</p>
+          <p>Nous mettons à l'honneur la cuisine française traditionnelle avec des influences venues d'ailleurs pour proposer des plats raffinés, accompagnés d'une sélection de vins soigneusement choisis parmi les meilleurs terroirs français.</p>
         </div>
         <div class="grid-2">
           <div class="card-la-carte fle-dir-col-cen-bot">
             <h4>La Carte</h4>
             <h5>Produits frais et de saison</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sit amet feugiat metus, sit amet aliquet lacus. Ut in lorem eu lorem tristique condimentum. Donec iaculis lacus elit, sed viverra erat semper ac. Nulla a ex non leo suscipit cursus vel quis mi. Phasellus bibendum feugiat purus, ac convallis !</p>
+            <p>Nous proposons une sélection de poissons et de viandes, préparés avec soin à partir de produits frais et de saison. Nous mettons un point d'honneur à offrir une expérience culinaire authentique, mettant en valeur la richesse des saveurs de notre terroir.</p>
           </div>
           <div class="card-la-cave fle-dir-col-cen-bot">
             <h4>La Cave</h4>
             <h5>Vins issus de grands vignobles</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sit amet feugiat metus, sit amet aliquet lacus. Ut in lorem eu lorem tristique condimentum. Donec iaculis lacus elit, sed viverra erat semper ac. Nulla a ex non leo suscipit cursus vel quis mi. Phasellus bibendum feugiat purus, ac convallis !</p>
+            <p>Pour sublimer votre expérience culinaire, nous proposons une sélection de vins soigneusement choisis. Vins rouges, blancs, rosés ou champagnes, chaque bouteille est sélectionnée pour accompagner à merveille nos plats raffinés, vous offrant ainsi un accord parfait entre mets et vins.</p>
           </div>
         </div>
         <div class="cta">
@@ -86,7 +85,7 @@
         </div>
         <div class="grid-2">
           <div class="texte-presentation">
-            <p>Situé au cœur de Bordeaux dans le quartier Saint-Seurin, La Croix Blanche est bien plus qu'un simple restaurant : c'est une expérience culinaire unique orchestrée par une équipe passionnée. Notre chef, Mohamed, avec plus de 20 ans d'expérience, crée des plats qui célèbrent les saveurs locales tout en ajoutant une touche moderne.</p>
+            <p>Situé au cœur de Bordeaux dans le quartier Saint-Seurin, La Croix Blanche est bien plus qu'un simple restaurant : c'est une expérience culinaire unique orchestrée par une équipe passionnée. Chef Momo, avec plus de 30 ans d'expérience à travers la France,   crée des plats qui célèbrent les saveurs locales tout en ajoutant une touche d'originalité.</p>
             <p>Notre équipe de serveurs, menée par la dynamique Virgine, s'engage à offrir un service chaleureux et attentif, assurant que chaque visite soit mémorable. Ensemble, nous partageons une passion commune pour la gastronomie et l'accueil, faisant de La Croix Blanche une destination incontournable pour les gourmets et amateurs de bonne cuisine.</p>
           </div>
         </div>
