--- a/infos_pratiques.html
+++ b/infos_pratiques.html
@@ -39,7 +39,7 @@
     </div>
     <div class="paiement">
       <h4>Moyens de paiement</h4>
-      <p>Carte bancaire, paiement sans contact, paiement mobile, espèces, tickets restaurants</p>
+      <p>Carte bancaire, paiement sans contact, paiement mobile, espèces, carte tickets restaurants</p>
     </div>
   </div>
 </div>
