--- a/la_carte.html
+++ b/la_carte.html
@@ -19,7 +19,8 @@
           <h5>Des produits frais et de saison</h6>
         </div>
         <div class="small-container texte-intro">
-          <p class="white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula. Nam tellus urna, lobortis vel auctor ut, consequat ac tellus. Suspendisse consequat tristique justo tempor hendrerit. Nunc sollicitudin eros sed est lacinia posuere. Nam sed felis volutpat, hendrerit lectus cursus, posuere neque.</p>
+          <p class="white">Chaque semaine, le chef vous propose un menu du midi différent, avec plusieurs propositions d'entrées, de plats et de desserts. Nos produits de saison sont sélectionnés auprès de nos fournisseurs du sud-ouest.</p>
+          <p class="white">Notre carte du soir, régulièrement renouvelée, vous promet une nouvelle expérience à chaque visite. Découvrez des plats tels que le Dorade au Citron Confît, l’Entrecôte Black Angus, la Joue de porc confite, le bol végan, la Pluma Ibérica, le ris de veau, le tartare de bœuf ou encore la raviole de langoustine. Terminez en beauté avec des desserts gourmands comme la tatin de tomates, le coulant chocolat caramel ou le baba au rhum. Laissez-vous surprendre par la créativité d’un chef passionné."</p>
         </div>
       </div>
     </div>
@@ -29,10 +30,10 @@
       <div class="container">
         <div class="grid-2">
           <div class="slides content-slideshow-plats fade">
-            <img src="/images/plat-01.png" alt="Le premier plat">
+            <img src="/images/plat-01.webp" alt="Le premier plat">
           </div>
           <div class="slides content-slideshow-plats fade">
-            <img src="/images/plat-02.png" alt="Le second plat">
+            <img src="/images/plat-02.webp" alt="Le second plat">
           </div>
         </div>
         <div class="slides-dot" style="text-align: center;">
@@ -104,7 +105,7 @@
             </div>
             <div class="menu-radio">
               <input type="radio" class="bt-radio" id="carte-viandes-poissons" name="carte-category" value="carte-viandes-poissons">
-              <label for="carte-viandes-poissons">Viandes/Poissons</label>
+              <label for="carte-viandes-poissons">Plats</label>
             </div>
             <div class="menu-radio">
               <input type="radio" class="bt-radio" id="carte-desserts" name="carte-category" value="carte-desserts">
@@ -153,11 +154,8 @@
           <h2>Cave</h2>
           <h3>Nos Vins</h3>
         </div>
-        <div class="small-container texte-intro">
-          <p class="white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula pahilo de que hurgy dolum.</p>
-        </div>
         <div id="vins" class="vins-container">
-          <h5>Notre sélection de vins</h5>
+          <h5>Sélectionner votre couleur</h5>
           <div class="filter-buttons filter-buttons-desktop">
             <div class="menu-radio">
               <input type="radio" class="bt-radio" id="vins-rouges" name="vins-category" value="vins-rouges" checked>
