Mise à jour du texte d'introduction

--- a/a_propos.html
+++ b/a_propos.html
@@ -21,7 +21,7 @@
           <h5>Découvrez notre histoire...</h6>
         </div>
         <div class="small-container texte-intro">
-          <p class="white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum nulla eget dui tincidunt elementum. Donec porttitor eu odio vitae blandit. Nam eleifend turpis vel lacus maximus efficitur. Phasellus quis pulvinar ligula. Nam tellus urna, lobortis vel auctor ut, consequat ac tellus. Suspendisse consequat tristique justo tempor hendrerit. Nunc sollicitudin eros sed est lacinia posuere. Nam sed felis volutpat, hendrerit lectus cursus, posuere neque.</p>
+          <p class="white">Faire connaissance avec notre équipe passionnée, en apprendre d'avantage sur La Croix Blanche et explorer le quartier historique qui nous entoure. En savoir plus sur nos engagements et sur les producteurs locaux avec qui nous collaborons pour vous offrir les meilleurs produits, en harmonie avec notre cuisine. Plongez dans les coulisses de notre aventure culinaire et partagez avec nous l'essence de notre savoir-faire.</p>
         </div>
       </div>
     </div>
